retrieveUnpackaged/objects/Data_Attribute__c.object
<CustomObject>
    <description>used to track data fields needed for API requests</description>
    <fields>
        <fullName>API_Name__c</fullName>
        <label>API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Request__c</fullName>
        <label>API Request</label>
        <referenceTo>Forms__c</referenceTo>
        <relationshipLabel>Data Attributes</relationshipLabel>
        <relationshipName>Data_Attributes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Field_Length__c</fullName>
        <label>Field Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Type__c</fullName>
        <label>Field Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Date/Time</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Picklist</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Data Attribute</label>
    <nameField>
        <displayFormat>DA-{000000}</displayFormat>
        <label>Data Attribute ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Attributes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>